<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MBRegistrationActivity" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/registration_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/registration_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_registration"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->

    <ScrollView
        android:id="@+id/registration_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/subtle_pattern_7" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical" >


            <Button
                android:id="@+id/accedi_facebook_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="#F5F5F5"
                android:background="@drawable/layer_button_facebook"
                android:textSize="14sp"
                android:drawableLeft="@drawable/facebook_icon"
                android:text="ACCEDI TRAMITE FB" />

            <EditText
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:paddingBottom="15dp"
                android:hint="@string/prompt_nickname"
                android:inputType="text"
                android:textColor="#3B5998"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingBottom="15dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textColor="#3B5998"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:layout_marginTop="5dp"
                android:paddingBottom="15dp"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_registrami_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:textColor="#3B5998"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/action_register"
                android:textColor="#F5F5F5"
                android:layout_gravity="center"
                android:background="@drawable/layer_button_register"
                android:shadowColor="#000000"
                android:shadowRadius="2"
                android:shadowDx="1"
                android:padding="10dp"/>

            <Button
                android:id="@+id/already_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:text="@string/action_hai_gia_account"
                android:background="@android:color/transparent"
                android:textSize="14sp"
                />

        </LinearLayout>
    </ScrollView>


</merge>