<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MBAccediActivity" >

    <!-- Recupero password progress -->

    <LinearLayout
        android:id="@+id/recupera_password_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/recupero_password_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/recupero_password_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>


    <!-- Form nuova fermata -->

    <ScrollView
        android:id="@+id/recupero_password_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".MBWikiBusActivitiy" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="4dp"
                android:text="@string/recupero_password_testo"
                />

            <EditText
                android:id="@+id/recupero_password_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/prompt_email"
                android:paddingBottom="10dp"
                android:inputType="textEmailAddress"
                android:textColor="#3B5998"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/recupero_fermata_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#3B5998"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/action_recupero_password"
                android:background="@drawable/layer_button_standard"
                android:shadowColor="#F5F5F5"
                android:shadowRadius="2"
                android:shadowDx="1" />

        </LinearLayout>
    </ScrollView>

</merge>