<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.magicbusapp.magicbus.WikibusFragment">

    <!-- Salvataggio fermata progress -->

    <LinearLayout
        android:id="@+id/salvataggio_fermata_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/salvataggio_fermata_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>


    <!-- Form nuova fermata -->

    <ScrollView
        android:id="@+id/nuova_fermata_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MBWikiBusActivitiy"
            >

            <!--  ListRow Left sied Thumbnail image -->

            <RelativeLayout
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#FF9900" >

                <TextView
                    android:id="@+id/popupwiki"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingRight="5dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="3dp"
                    android:text="Nuova fermata autobus"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toRightOf="@+id/image"
                    android:layout_toEndOf="@+id/image" />

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_alignParentLeft="true"
                    android:src="@mipmap/ic_bus_marker" />


            </RelativeLayout>

            <EditText
                android:id="@+id/nome_fermata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/prompt_nome_fermata"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="#FF9900"
                android:singleLine="true" />

            <Button
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="Condividi"
                android:textColor="#F5EDE3"
                android:layout_gravity="center"
                android:background="@drawable/layer_button_wikibus"
                android:shadowColor="#000000"
                android:shadowRadius="2"
                android:padding="12dp"
                android:visibility="gone"
                >
            </Button>

            <Button
                android:id="@+id/add_fermata_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:layout_marginRight="15dp"
                android:padding="12dp"
                android:text="@string/action_add_fermata"
                android:background="@drawable/layer_button_wikibus"
                android:textColor="#F5EDE3" />

            <TextView
                android:id="@+id/info_wikibus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="New: puoi anche aggiungere una fermata tenendo premuto sulla mappa nel punto esatto :-)\n\nAssicurati di:\n-> trovarti nei pressi di una fermata autobus non presente sulla mappa.\n-> essere nella posizione giusta ;-)"
                android:layout_marginTop="46dp"
                android:padding="10dp"
                android:layout_gravity="bottom"
                android:layout_margin="15dp"
                android:textColor="#8D99A5"
                />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
